[gd_scene load_steps=7 format=3 uid="uid://dj32l70op4dk4"]

[ext_resource type="Script" uid="uid://bdh8ha5fryab" path="res://scenes/GUI/bingo_main/actions/gui_attune_main.gd" id="1_8krun"]
[ext_resource type="PackedScene" uid="uid://beuy7po6dtwkn" path="res://scenes/GUI/utils/gui_overlay_background.tscn" id="2_8240s"]
[ext_resource type="PackedScene" uid="uid://c7axrk5wwb6ab" path="res://scenes/GUI/containers/gui_popup_container.tscn" id="3_0pbt1"]
[ext_resource type="PackedScene" uid="uid://b6p5ctp7wlskh" path="res://scenes/GUI/controls/buttons/gui_bingo_ball_button.tscn" id="4_4vmfr"]
[ext_resource type="PackedScene" uid="uid://bgeepmq2eiey4" path="res://scenes/GUI/controls/buttons/gui_rich_text_button.tscn" id="5_dmwax"]
[ext_resource type="PackedScene" uid="uid://bpq3i81meetrl" path="res://scenes/GUI/bingo_main/actions/gui_attune_confirmation_overlay.tscn" id="5_lbey5"]

[node name="GUIAttuneMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8krun")

[node name="GUIOverlayBackground" parent="." instance=ExtResource("2_8240s")]
layout_mode = 1

[node name="GUIPopupContainer" parent="." instance=ExtResource("3_0pbt1")]
unique_name_in_owner = true
layout_mode = 1
offset_left = -73.0
offset_top = -78.0
offset_right = 73.0
offset_bottom = 74.0
show_animation_type = 3

[node name="Label" type="Label" parent="GUIPopupContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Select a card to remove
"
horizontal_alignment = 1

[node name="Background" parent="GUIPopupContainer/VBoxContainer" index="1"]
self_modulate = Color(0.901961, 0.611765, 0.411765, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="GUIPopupContainer/VBoxContainer/Background/NinePatchRect/MarginContainer" index="0"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="GUIPopupContainer/VBoxContainer/Background/NinePatchRect/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="GUIPopupContainer/VBoxContainer/Background/NinePatchRect/MarginContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 5

[node name="GUIBingoBallButton" parent="GUIPopupContainer/VBoxContainer/Background/NinePatchRect/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_4vmfr")]
layout_mode = 2

[node name="GUIBingoBallButton2" parent="GUIPopupContainer/VBoxContainer/Background/NinePatchRect/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_4vmfr")]
layout_mode = 2

[node name="GUIBingoBallButton3" parent="GUIPopupContainer/VBoxContainer/Background/NinePatchRect/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_4vmfr")]
layout_mode = 2

[node name="GUIBingoBallButton4" parent="GUIPopupContainer/VBoxContainer/Background/NinePatchRect/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("4_4vmfr")]
layout_mode = 2

[node name="BackButton" parent="GUIPopupContainer/VBoxContainer" index="2" instance=ExtResource("5_dmwax")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
localization_text_key = "BACK"

[node name="GUIAttuneConfirmationOverlay" parent="." instance=ExtResource("5_lbey5")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[editable path="GUIPopupContainer"]
